# VEDA

./: .dockerignore  .env.examples  .gitignore  307E-25FD  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-base.txt  requirements-memory.txt  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
core/: executor.py  memory.py  planner.py  workspace.py
core/browser_agent/: session.py
core/code_agent/: dependencies.py  diff.py  generation.py  patch.py  reader.py  rename.py  review.py  tests.py
core/project/: budget.py  context.py  dependencies.py  detectors.py  entrypoints.py  formatter.py  models.py  scanner.py
core/tools/: base.py  browser.py  (+7 more)
docs/: ARCHITECTURE.md  ROADMAP.md
monitoring/: prometheus.yml
nginx/: nginx.conf
shared/: models.py
tests/: test_architecture_summary.py  test_browser_session.py  test_browser_tool.py  test_browser_tool_extended.py  test_code_agent_dependencies.py  test_code_agent_diff.py  test_code_agent_documentation.py  test_code_agent_editor.py  test_code_agent_generation.py  test_code_agent_patch.py  test_code_agent_reader.py  test_code_agent_rename.py  test_code_agent_review.py  test_code_agent_tests.py  test_code_ops_tools.py  test_code_summarizer.py  test_dependency_graph.py  test_entrypoints.py  test_folder_tree.py  test_important_files.py  test_planner_browser_routing.py  test_project_ops_tools.py  test_project_scanner.py  test_relevant_files.py  test_repository_paths.py  test_token_budget.py
veda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
voice/: client.py
(+10 files in other folders)
